--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/amir-icon-background.png" />
+    <link rel="icon" href="/QRganize-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Amir Kakons Portfoliio Website."
+      content="QRganize."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Amir's Portfolio</title>
+    <title>QRganize</title>
     <script defer="defer" src="/static/js/main.b4286865.js"></script>
     <link href="/static/css/main.f855e6bc.css" rel="stylesheet" />
   </head>
